--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@ a:visited {
 
 .container {
   display: flex;
+  margin-right: 20px;
+  margin-left: 0px;
 }
 
 .container--vertical {
